:bug: checkboxes not visible

--- a/src/sass/partials/global/_mixins.scss
+++ b/src/sass/partials/global/_mixins.scss
@@ -52,7 +52,6 @@
 }
 
 @mixin checkbox {
-  opacity: 0;
 
   + label {
     position: relative;
@@ -138,7 +137,6 @@
 }
 
 @mixin radio {
-  opacity: 0;
 
   + label {
     position: relative;
